fix: fix TimeLine being too small in Header

--- a/src/components/TimeLine/TimeLine.css
+++ b/src/components/TimeLine/TimeLine.css
@@ -1,6 +1,6 @@
 .time-line {
   overflow: hidden;
-  margin: 40px 0 36px;
+  margin: 40px -16px 36px;
 }
 
 .time-line__times {
@@ -89,7 +89,7 @@
 
 @media (min-width: 768px) {
   .time-line {
-    margin: 64px 0 60px;
+    margin: 64px -48px 60px;
   }
 
   .time-line__times {
@@ -131,7 +131,7 @@
 
 @media (min-width: 1024px) {
   .time-line {
-    margin: 80px 0 74px;
+    margin: 80px -80px 74px;
   }
 
   .time-line__times {
